Fixed #154 - Docs version switcher disappears behind footers

--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -2031,6 +2031,7 @@ h2 + .list-link-soup {
 	bottom: 15px;
 	margin: 0;
 	padding: 0;
+	z-index: 1;
 
 	list-style: none;
 
